fix missing space when only tags and comments

--- a/web/css/xneth/style.css
+++ b/web/css/xneth/style.css
@@ -235,6 +235,7 @@ a:hover {
   height: 400px;
   background-color: #FAFAFA;
   float: left;
+  margin-bottom: 16px;
 }
 
 .box_repartition {
